fix flex wrap

--- a/styles/uri.module.css
+++ b/styles/uri.module.css
@@ -2,6 +2,7 @@
 .slug {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: flex-start;
   position: relative;
   margin-bottom: 100px;
